# rg13

./: Cargo.toml  build.rs
.github/workflows/: ci.yml  release.yml
crates/cli/: Cargo.toml
crates/core/: app.rs  args.rs  config.rs  search.rs
crates/globset/: Cargo.toml
crates/grep/: Cargo.toml
crates/ignore/: Cargo.toml
crates/ignore/src/: default_types.rs  dir.rs  overrides.rs
crates/matcher/: Cargo.toml
crates/pcre2/: Cargo.toml
crates/printer/: Cargo.toml
crates/printer/src/: jsont.rs
crates/regex/: Cargo.toml
crates/regex/src/: ast.rs  non_matching.rs
crates/searcher/: Cargo.toml
tests/: feature.rs  misc.rs  regression.rs
