[package]
name = "grep-cli"
version = "0.1.8"  #:version
authors = ["Andrew Gallant <jamslam@gmail.com>"]
description = """
Utilities for search oriented command line applications.
"""
documentation = "https://docs.rs/grep-cli"
homepage = "https://github.com/BurntSushi/ripgrep/tree/master/crates/cli"
repository = "https://github.com/BurntSushi/ripgrep/tree/master/crates/cli"
readme = "README.md"
keywords = ["regex", "grep", "cli", "utility", "util"]
license = "Unlicense OR MIT"
edition = "2018"

[dependencies]
bstr = "1.12.1"
globset = { version = "0.4.10", path = "../globset" }
lazy_static = "1.5.0"
log = "0.4.29"
regex = "1.12"
same-file = "1.0.6"
termcolor = "1.4.1"

[target.'cfg(windows)'.dependencies.winapi-util]
version = "0.1.11"
