[package]
name = "globset"
version = "0.4.10"  #:version
authors = ["Andrew Gallant <jamslam@gmail.com>"]
description = """
Cross platform single glob and glob set matching. Glob set matching is the
process of matching one or more glob patterns against a single candidate path
simultaneously, and returning all of the globs that matched.
"""
documentation = "https://docs.rs/globset"
homepage = "https://github.com/BurntSushi/ripgrep/tree/master/crates/globset"
repository = "https://github.com/BurntSushi/ripgrep/tree/master/crates/globset"
readme = "README.md"
keywords = ["regex", "glob", "multiple", "set", "pattern"]
license = "Unlicense OR MIT"
edition = "2018"

[lib]
name = "globset"
bench = false

[dependencies]
aho-corasick = "1.1.4"
bstr = { version = "1.12.1", default-features = false, features = ["std"] }
fnv = "1.0.7"
log = { version = "0.4.29", optional = true }
regex = { version = "1.12.2", default-features = false, features = ["perf", "std"] }
serde = { version = "1.0.228", optional = true }

[dev-dependencies]
glob = "0.3.3"
lazy_static = "1"
serde_json = "1.0.145"

[features]
default = ["log"]
simd-accel = []
serde1 = ["serde"]
