[package]
name = "ignore"
version = "0.4.20"  #:version
authors = ["Andrew Gallant <jamslam@gmail.com>"]
description = """
A fast library for efficiently matching ignore files such as `.gitignore`
against file paths.
"""
documentation = "https://docs.rs/ignore"
homepage = "https://github.com/BurntSushi/ripgrep/tree/master/crates/ignore"
repository = "https://github.com/BurntSushi/ripgrep/tree/master/crates/ignore"
readme = "README.md"
keywords = ["glob", "ignore", "gitignore", "pattern", "file"]
license = "Unlicense OR MIT"
edition = "2018"

[lib]
name = "ignore"
bench = false

[dependencies]
globset = { version = "0.4.10", path = "../globset" }
lazy_static = "1.5"
log = "0.4.29"
memchr = "2.7"
regex = { version = "1.12.2", default-features = false, features = ["perf", "std", "unicode-gencat"] }
same-file = "1.0.6"
thread_local = "1"
walkdir = "2.5.0"

[target.'cfg(windows)'.dependencies.winapi-util]
version = "0.1.11"

[dev-dependencies]
crossbeam-channel = "0.5.15"

[features]
simd-accel = ["globset/simd-accel"]
